log_output: Fix whitespace in log output XSL
The XSL file that converts the log xml into a html file contains some
strange whitespace characters that output in the HTML as squares.

This patch fixes the whitespace and reformats the indetation to two
spaces as used in libvirt XML files.

*log.css: -make test name field wider
*log.xsl: -fix whitespace and indentation
          -remove '@' from test headers

--- a/log.css
+++ b/log.css
@@ -75,7 +75,7 @@ table td{
 }
 
 .li-tit{
-	width:150px;
+	width:250px;
 }
 
 .statu-list{
